--- a/create_account.html
+++ b/create_account.html
@@ -280,7 +280,7 @@
 				<div class="left-part">
 					<div class="small-form form">
 						<h2 class="heading">Do you already have an account?</h2>
-						<a href="" class="sub-button">LOGIN</a>
+						<a href="login_page.html" class="sub-button">LOGIN</a>
 					</div>
 				</div>
 			</div>
