--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
 	<form action="" class="form_filter">
 		<div class="options_card">
 			<div class="radio_options">
-				<input type="radio" id="checkbox11" name="input_pickup_loc">
-				<label for="input_pickup_loc" class="radio_label">
+				<input type="radio" id="input_pickup_loc1" name="input_pickup_loc">
+				<label for="input_pickup_loc1" class="radio_label">
 					<span class="custom_radio"></span>
 				</label>
 			</div>
@@ -257,8 +257,8 @@
 		</div>
 		<div class="options_card">
 			<div class="radio_options">
-				<input type="radio" id="checkbox11" name="input_pickup_loc">
-				<label for="input_pickup_loc" class="radio_label">
+				<input type="radio" id="input_pickup_loc2" name="input_pickup_loc">
+				<label for="input_pickup_loc2" class="radio_label">
 					<span class="custom_radio"></span>
 				</label>
 			</div>
