--- a/login_page.html
+++ b/login_page.html
@@ -51,7 +51,7 @@
 							<button class="main-button">LOGIN</button>
 							<div class="link-login-form d-flex ai jc">
 								<a href="" class="h3">Reset Password</a>
-								<a href="" class="h3 text_end">Sign up</a>
+								<a href="create_account.html" class="h3 text_end">Sign up</a>
 							</div>
 						</div>
 					</form>
