--- a/details_declaration.html
+++ b/details_declaration.html
@@ -244,8 +244,8 @@
 	<form action="" class="form_filter">
 		<div class="options_card">
 			<div class="radio_options">
-				<input type="radio" id="checkbox11" name="input_pickup_loc">
-				<label for="input_pickup_loc" class="radio_label">
+				<input type="radio" id="input_pickup_loc1" name="input_pickup_loc">
+				<label for="input_pickup_loc1" class="radio_label">
 					<span class="custom_radio"></span>
 				</label>
 			</div>
@@ -257,8 +257,8 @@
 		</div>
 		<div class="options_card">
 			<div class="radio_options">
-				<input type="radio" id="checkbox11" name="input_pickup_loc">
-				<label for="input_pickup_loc" class="radio_label">
+				<input type="radio" id="input_pickup_loc2" name="input_pickup_loc">
+				<label for="input_pickup_loc2" class="radio_label">
 					<span class="custom_radio"></span>
 				</label>
 			</div>
@@ -314,10 +314,10 @@
 				<h6>Actions</h6>
 				<img class="dots" src="img/dots_white.svg" alt="">
 				<div class="dots-submenu">
-	                    <div class="line-dots-menu d-flex ai">
+	                    <a href="#popup_add_message" class="button_filter line-dots-menu d-flex ai">
 	                      <img class="" src="img/mail.svg" alt="">
 	                      View / Add Message (2)
-	                    </div>
+	                    </a>
 	                    <div class="line-dots-menu d-flex ai">
 	                      <img src="img/wallet.svg" alt="">
 	                      Pay
@@ -348,6 +348,9 @@
 	                    </div>
 	            </div>
 			</div>
+			<a href="#popup_add_message_mobile" class="button_filter action_btn_mobile">
+				<img class="dots" src="img/dots_white.svg" alt="">
+			</a>
 		</div>
 	</div>
 </div>
@@ -1272,6 +1275,123 @@
 			</div>
 		</div>
 </section>
+<div class="popup_add_message white-popup-block mfp-hide" id="popup_add_message">
+	<div class="top_part">
+		<h2>View / Add Message</h2>
+		<svg class="close_popup" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path d="M2.33274 15.6668L15.666 2.3335" stroke="#fff" stroke-width="3" stroke-linecap="round"/>
+			<path d="M2.33274 2.33371L15.666 15.667" stroke="#fff" stroke-width="3" stroke-linecap="round"/>
+		</svg>
+	</div>
+	<div class="">
+		<div class="table_message">
+			<table class="table-profile">
+	            <tr class="section-name bb">
+	              <th class="name-sec-tb text-left first-ml">
+	              	Date
+	              </th>
+	              <th class="name-sec-tb text-left">
+	              	Sender Email
+	              </th>
+	              <th class="name-sec-tb text-left">
+	              	Message
+	              </th>
+	            </tr>
+	            <tr>
+	              <td class="first-ml">02/26/2023 08:37</td>
+	              <td>3333@test.com</td>
+	              <td>All Online Orders are subject to weight and information cross-check.</td>
+	            </tr>
+	            <tr>
+	              <td class="first-ml">02/26/2023 08:37</td>
+	              <td>3333@test.com</td>
+	              <td>All Online Orders are subject to weight and information cross-check.</td>
+	            </tr>
+	            <tr>
+	              <td class="first-ml">02/26/2023 08:37</td>
+	              <td>3333@test.com</td>
+	              <td>All Online Orders are subject to weight and information cross-check.</td>
+	            </tr>
+	            <tr>
+	              <td class="first-ml">02/26/2023 08:37</td>
+	              <td>3333@test.com</td>
+	              <td>All Online Orders are subject to weight and information cross-check.</td>
+	            </tr>
+          	</table>
+		</div>
+	</div>
+	<form class="bottom_part">
+		<label for="" class="label_message">
+			<input type="text" placeholder="Повідомлення...">
+			<button class="blue_button54">Add a message</button>
+		</label>
+	</form>
+</div>
+<div class="popup_add_message mobile white-popup-block mfp-hide" id="popup_add_message_mobile">
+	<div class="top_part">
+		<h2>View / Add Message</h2>
+		<svg class="close_popup" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path d="M2.33274 15.6668L15.666 2.3335" stroke="#2361A9" stroke-width="3" stroke-linecap="round"/>
+			<path d="M2.33274 2.33371L15.666 15.667" stroke="#2361A9" stroke-width="3" stroke-linecap="round"/>
+		</svg>
+	</div>
+	<div class="table_message_mobile">
+		<div class="row-order-h">
+			<div class="top d-flex jc">
+		       	<div class="col-mob-table">
+		           	<p class="name_col">Date</p>
+		           	<p class="info_col">02/26/2023 08:37</p>
+		       	</div>
+		        <div class="col-mob-table">
+		           	<p class="name_col">Sender Email</p>
+		           	<p class="info_col">nazar.strochynsky@mees...</p>
+		        </div>
+	       	</div>
+	        <div class="col-mob-table message">
+	            <p class="name_col">Message</p>
+	            <p class="info_col">All Online Orders are subject to weight and information cross-check. All Online Orders are subject to weight and information cross-check.</p>
+	        </div>
+	    </div>
+	    <div class="row-order-h">
+			<div class="top d-flex jc">
+		       	<div class="col-mob-table">
+		           	<p class="name_col">Date</p>
+		           	<p class="info_col">02/26/2023 08:37</p>
+		       	</div>
+		        <div class="col-mob-table">
+		           	<p class="name_col">Sender Email</p>
+		           	<p class="info_col">nazar.strochynsky@mees...</p>
+		        </div>
+	       	</div>
+	        <div class="col-mob-table message">
+	            <p class="name_col">Message</p>
+	            <p class="info_col">All Online Orders are subject to weight and information cross-check. All Online Orders are subject to weight and information cross-check.</p>
+	        </div>
+	    </div>
+	    <div class="row-order-h">
+			<div class="top d-flex jc">
+		       	<div class="col-mob-table">
+		           	<p class="name_col">Date</p>
+		           	<p class="info_col">02/26/2023 08:37</p>
+		       	</div>
+		        <div class="col-mob-table">
+		           	<p class="name_col">Sender Email</p>
+		           	<p class="info_col">nazar.strochynsky@mees...</p>
+		        </div>
+	       	</div>
+	        <div class="col-mob-table message">
+	            <p class="name_col">Message</p>
+	            <p class="info_col">All Online Orders are subject to weight and information cross-check. All Online Orders are subject to weight and information cross-check.</p>
+	        </div>
+	    </div>
+	</div>
+	<form class="bottom_part">
+		<label for="" class="label_message">
+			<input type="text" placeholder="Повідомлення...">
+			<button class="blue_button54">Add</button>
+		</label>
+	</form>
+</div>
 <footer>
 	<div class="container">
 		<div class="footer_top">
