--- a/create_account.html
+++ b/create_account.html
@@ -4,9 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Create_an_account</title>
-	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/6.2.4/simplebar.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/base/jquery-ui.min.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/4.1.5/css/flag-icons.min.css" rel="stylesheet"/>
 	<link rel="stylesheet" href="css/media.css">
 </head>
 <body>
@@ -39,7 +42,7 @@
 								<div class="form-flex d-flex ai">
 									<div class="form-row">
 										<label for="" class="label">Contact Phone</label>
-										<input type="tel" class="input phone" name="phone" placeholder="Contact Phone">
+										<input type="tel" name="phone" inputmode="numeric" class="input phoneInput" placeholder="Contact Phone" autocomplete="off" aria-invalid="false"  >
 									</div>
 									<div class="form-row">
 										<label for="" class="label">Email</label>
@@ -72,7 +75,7 @@
 											
 										</div>
 									</div>
-									<div class="form-row">
+									<div class="form-row flex_direct">
 										<label for="" class="label">Language preference</label>
 										<select name="language_preference" id="" class="input language_preference select">
 											<option value="">Ukraine</option>
@@ -118,7 +121,7 @@
 						<form action="" class="form-user-address form_for_flex_column2 section-sub-menu bb">
 							<div class="form-flex-wrap">
 								<div class="form-flex d-flex ai">
-									<div class="form-row">
+									<div class="form-row flex_direct">
 										<label for="" class="label">Address Lookup</label>
 										<select name="address_lookup" id="" class="select">
 											<option value="">Ukraine</option>
@@ -126,7 +129,7 @@
 											<option value="">Ukraine</option>
 										</select>
 									</div>
-									<div class="form-row">
+									<div class="form-row flex_direct">
 										<label for="" class="label">Country</label>
 										<select name="country" id="" class="country_select">
 											<option value=""></option>
@@ -150,7 +153,7 @@
 									</div>
 								</div>
 								<div class="form-flex d-flex ai">
-									<div class="form-row">
+									<div class="form-row flex_direct">
 										<label for="" class="label">City</label>
 										<select name="city" id="" class=" select">
 											<option value="">Ukraine</option>
@@ -194,14 +197,14 @@
 							</label>
 							<div class="form-flex-wrap">
 								<div class="form-flex d-flex ai">
-									<div class="form-row">
+									<div class="form-row flex_direct">
 										<label for="" class="label">Address Lookup</label>
 										<select name="address_lookup" id="" class="select">
 											<option value="">Ukraine</option>
 											<option value="">POland</option>
 										</select>
 									</div>
-									<div class="form-row">
+									<div class="form-row flex_direct">
 										<label for="" class="label">Country</label>
 										<select name="country" id="" class="country_select">
 											<option value=""></option>
@@ -225,7 +228,7 @@
 									</div>
 								</div>
 								<div class="form-flex d-flex ai">
-									<div class="form-row">
+									<div class="form-row flex_direct">
 										<label for="" class="label">City</label>
 										<select name="city" id="" class="select">
 											<img src="img/flag.svg" alt="">
@@ -290,6 +293,7 @@
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/simplebar/6.2.4/simplebar.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
 <script src="js/jquery.validate.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
 <script src="js/script.js"></script>
