--- a/invoices.html
+++ b/invoices.html
@@ -325,6 +325,14 @@
 					<span class="name_input">Container:</span>
 					<input type="number" autocomplete="off" placeholder="ukraine">
 				</label>
+				<label for="" class="parcel_shipment_label">
+					<span class="name_input">Type:</span>
+					<select name="" id="" class="select">
+						<option value="" selected disabled>status</option>
+						<option value="IGFV">IGFV</option>
+						<option value="PIUYD">:PIUYD</option>
+					</select>
+				</label>
 				<label for="from" class="parcel_shipment_label">
 					<span class="name_input">Date From:</span>
 					<input type="text" name="" class="datepicker">
@@ -334,14 +342,6 @@
 					<span class="name_input">Date To:</span>
 					<input type="text" name="" class="datepicker">
 					<!-- <input type="text" autocomplete="off" placeholder="ukraine" name="to" class="datepicker"> -->
-				</label>
-				<label for="" class="parcel_shipment_label">
-					<span class="name_input">Type:</span>
-					<select name="" id="" class="select">
-						<option value="" selected disabled>status</option>
-						<option value="IGFV">IGFV</option>
-						<option value="PIUYD">:PIUYD</option>
-					</select>
 				</label>
 				<button class="blue_button45">Apply</button>
 			</form>
@@ -476,6 +476,7 @@
 <script src="js/jq.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/simplebar/6.2.4/simplebar.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 <script src="js/jquery.validate.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
