--- a/statements.html
+++ b/statements.html
@@ -300,7 +300,11 @@
 				<form action="" class="parcel_shipment_form">
 					<label for="" class="parcel_shipment_label">
 						<span class="name_input">Summary #:</span>
-						<input type="text" autocomplete="off" placeholder="ukraine">
+						<select name="" id="" class="select">
+							<option value="" selected disabled>Ukraine</option>
+							<option value="IGFV">IGFV</option>
+							<option value="PIUYD">:PIUYD</option>
+						</select>
 					</label>
 					<label for="" class="parcel_shipment_label">
 						<span class="name_input">Date From:</span>
@@ -1962,6 +1966,7 @@
 <script src="js/jq.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/simplebar/6.2.4/simplebar.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 <script src="js/jquery.validate.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
