--- a/create_account.html
+++ b/create_account.html
@@ -78,9 +78,10 @@
 									<div class="form-row flex_direct">
 										<label for="" class="label">Language preference</label>
 										<select name="language_preference" id="" class="input language_preference select">
-											<option value="">Ukraine</option>
-											<option value="">Ukraine</option>
-											<option value="">Ukraine</option>
+											<option value="" selected disabled>Language</option>
+											<option value="Ukraine">Ukraine</option>
+											<option value="Ukrainejjh">Ukraine</option>
+											<option value="Ukrainej">Ukraine</option>
 										</select>
 									</div>
 								</div>		
@@ -124,9 +125,10 @@
 									<div class="form-row flex_direct">
 										<label for="" class="label">Address Lookup</label>
 										<select name="address_lookup" id="" class="select">
-											<option value="">Ukraine</option>
-											<option value="">Ukraine</option>
-											<option value="">Ukraine</option>
+											<option value="" selected disabled>Address</option>
+											<option value="Ukrainehj">Ukraine</option>
+											<option value="Ukraineuyu">Ukraine</option>
+											<option value="Ukraineku">Ukraine</option>
 										</select>
 									</div>
 									<div class="form-row flex_direct">
@@ -156,9 +158,10 @@
 									<div class="form-row flex_direct">
 										<label for="" class="label">City</label>
 										<select name="city" id="" class=" select">
-											<option value="">Ukraine</option>
-											<option value="">Ukraine</option>
-											<option value="">Ukraine</option>
+											<option value="" selected disabled>Address</option>
+											<option value="Ukrainehj">Ukraine</option>
+											<option value="Ukraineuyu">Ukraine</option>
+											<option value="Ukraineku">Ukraine</option>
 										</select>
 									</div>
 									<div class="form-columns2 d_block d-flex">
@@ -200,8 +203,10 @@
 									<div class="form-row flex_direct">
 										<label for="" class="label">Address Lookup</label>
 										<select name="address_lookup" id="" class="select">
-											<option value="">Ukraine</option>
-											<option value="">POland</option>
+											<option value="" selected disabled>Address</option>
+											<option value="Ukrainehj">Ukraine</option>
+											<option value="Ukraineuyu">Ukraine</option>
+											<option value="Ukraineku">Ukraine</option>
 										</select>
 									</div>
 									<div class="form-row flex_direct">
@@ -232,9 +237,10 @@
 										<label for="" class="label">City</label>
 										<select name="city" id="" class="select">
 											<img src="img/flag.svg" alt="">
-											<option value="">Ukraine</option>
-											<option value="">Ukraine</option>
-											<option value="">Ukraine</option>
+											<option value="" selected disabled>Address</option>
+											<option value="Ukrainehj">Ukraine</option>
+											<option value="Ukraineuyu">Ukraine</option>
+											<option value="Ukraineku">Ukraine</option>
 										</select>
 									</div>
 									<div class="form-columns2 d_block d-flex">
@@ -292,8 +298,8 @@
 <script src="js/jq.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/simplebar/6.2.4/simplebar.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
 <script src="js/jquery.validate.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
 <script src="js/script.js"></script>
