--- a/your_account.html
+++ b/your_account.html
@@ -318,7 +318,7 @@
 									<div class="form-flex d-flex ai">
 										<div class="form-row">
 											<label for="" class="label">Contact Phone</label>
-											<input type="tel" class="input phone" name="phone" placeholder="Contact Phone">
+											<input type="tel" name="phone" inputmode="numeric" class="input phoneInput" placeholder="Contact Phone" autocomplete="off" aria-invalid="false"  >
 										</div>
 										<div class="form-row">
 											<label for="" class="label">Email</label>
@@ -354,9 +354,10 @@
 										<div class="form-row flex_direct">
 											<label for="" class="label">Language preference</label>
 											<select name="language_preference" id="" class="select language_preference">
-												<option value="">Ukraine</option>
-												<option value="">Ukraine</option>
-												<option value="">Ukraine</option>
+												<option value="" selected disabled>Language</option>
+												<option value="Ukrainehj">Ukraine</option>
+												<option value="Ukraineuyu">Ukraine</option>
+												<option value="Ukraineku">Ukraine</option>
 											</select>
 										</div>
 									</div>		
@@ -383,9 +384,10 @@
 										<div class="form-row flex_direct">
 											<label for="" class="label">Address Lookup</label>
 											<select name="address_lookup" id="" class="select">
-												<option value="">Ukraine</option>
-												<option value="">Ukraine</option>
-												<option value="">Ukraine</option>
+												<option value="" selected disabled>Address</option>
+												<option value="Ukrainehj">Ukraine</option>
+												<option value="Ukraineuyu">Ukraine</option>
+												<option value="Ukraineku">Ukraine</option>
 											</select>
 										</div>
 										<div class="form-row flex_direct">
@@ -415,9 +417,10 @@
 										<div class="form-row flex_direct">
 											<label for="" class="label">City</label>
 											<select name="city" id="" class=" select">
-												<option value="">Ukraine</option>
-												<option value="">Ukraine</option>
-												<option value="">Ukraine</option>
+												<option value="" selected disabled>City</option>
+												<option value="Ukrainehj">Ukraine</option>
+												<option value="Ukraineuyu">Ukraine</option>
+												<option value="Ukraineku">Ukraine</option>
 											</select>
 										</div>
 										<div class="form-columns2 d_block d-flex">
@@ -459,8 +462,10 @@
 									<div class="form-row flex_direct">
 										<label for="" class="label">Address Lookup</label>
 										<select name="address_lookup" id="" class="select">
-											<option value="">Ukraine</option>
-											<option value="">POland</option>
+											<option value="" selected disabled>Address</option>
+											<option value="Ukrainehj">Ukraine</option>
+											<option value="Ukraineuyu">Ukraine</option>
+											<option value="Ukraineku">Ukraine</option>
 										</select>
 									</div>
 									<div class="form-row flex_direct">
@@ -491,9 +496,10 @@
 										<label for="" class="label">City</label>
 										<select name="city" id="" class="select">
 											<img src="img/flag.svg" alt="">
-											<option value="">Ukraine</option>
-											<option value="">Ukraine</option>
-											<option value="">Ukraine</option>
+											<option value="" selected disabled>City</option>
+											<option value="Ukrainehj">Ukraine</option>
+											<option value="Ukraineuyu">Ukraine</option>
+											<option value="Ukraineku">Ukraine</option>
 										</select>
 									</div>
 									<div class="form-columns2 d_block d-flex">
