edits mask_phone_input, add popup_message

--- a/create_account.html
+++ b/create_account.html
@@ -37,7 +37,7 @@
 								<p class="h4">EDIT</p>
 							</a>
 						</div>
-						<form action="" class="form-create-account section-sub-menu active bb">
+						<form action="" class="form_validate form-create-account section-sub-menu active bb">
 							<div class="form-flex-wrap">
 								<div class="form-flex d-flex ai">
 									<div class="form-row">
@@ -119,7 +119,7 @@
 								<p class="h4">EDIT</p>
 							</a>
 						</div>
-						<form action="" class="form-user-address form_for_flex_column2 section-sub-menu bb">
+						<form action="" class="form_validate form-user-address form_for_flex_column2 section-sub-menu bb">
 							<div class="form-flex-wrap">
 								<div class="form-flex d-flex ai">
 									<div class="form-row flex_direct">
@@ -192,7 +192,7 @@
 								<p class="h4">EDIT</p>
 							</a>
 						</div>
-						<form action="" class="form-billing_address form_for_flex_column2 section-sub-menu bb">
+						<form action="" class="form_validate form-billing_address form_for_flex_column2 section-sub-menu bb">
 							<label class="custom_chekbox checkbox_row" for="checkbox61">
 								<input type="checkbox" name="checkbox_inrow" id="checkbox61">
 								<span class="checkmark"></span>
