--- a/declaration_tracking.html
+++ b/declaration_tracking.html
@@ -86,10 +86,10 @@
 				<form action="" class="declaration_form">
 					<input type="text" placeholder="CV903019080CA">
 					<div class="flex_btn">
-						<a href="#" class="blue_button">view</a>
-						<a href="#" class="blue_button">Label 4x6</a>
-						<a href="#" class="blue_button">CN23 Form</a>
-						<a href="#" class="blue_button">statement</a>
+						<a href="#" class="blue_button54">view</a>
+						<a href="#" class="blue_button54">Label 4x6</a>
+						<a href="#" class="blue_button54">CN23 Form</a>
+						<a href="#" class="blue_button54">statement</a>
 					</div>
 				</form>
 			</div>
