--- a/login_page.html
+++ b/login_page.html
@@ -14,7 +14,7 @@
 			<a href="" class="logo north_america"><img src="img/logo_north_america.svg" alt="logo-meest"></a>
 			<div class="s_register_page">
 				<div class="login-form w40">
-					<form action="" class="login-form-valid form" autocomplete="off">
+					<form action="" class="form_validate login-form-valid form" autocomplete="off">
 						<div class="container-form">
 							<h2 class="heading">
 								LOGIN
