--- a/details_declaration.html
+++ b/details_declaration.html
@@ -287,6 +287,125 @@
 		<button class="blue_button45">send</button>
 	</form>
 </div>
+
+<div class="popup_add_message mobile white-popup-block mfp-hide" id="popup_add_message_mobile">
+	<div class="top_part">
+		<h2>View / Add Message</h2>
+		<svg class="close_popup" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path d="M2.33274 15.6668L15.666 2.3335" stroke="#2361A9" stroke-width="3" stroke-linecap="round"/>
+			<path d="M2.33274 2.33371L15.666 15.667" stroke="#2361A9" stroke-width="3" stroke-linecap="round"/>
+		</svg>
+	</div>
+	<div class="table_message_mobile">
+		<div class="row-order-h">
+			<div class="top d-flex jc">
+		       	<div class="col-mob-table">
+		           	<p class="name_col">Date</p>
+		           	<p class="info_col">02/26/2023 08:37</p>
+		       	</div>
+		        <div class="col-mob-table">
+		           	<p class="name_col">Sender Email</p>
+		           	<p class="info_col">nazar.strochynsky@mees...</p>
+		        </div>
+	       	</div>
+	        <div class="col-mob-table message">
+	            <p class="name_col">Message</p>
+	            <p class="info_col">All Online Orders are subject to weight and information cross-check. All Online Orders are subject to weight and information cross-check.</p>
+	        </div>
+	    </div>
+	    <div class="row-order-h">
+			<div class="top d-flex jc">
+		       	<div class="col-mob-table">
+		           	<p class="name_col">Date</p>
+		           	<p class="info_col">02/26/2023 08:37</p>
+		       	</div>
+		        <div class="col-mob-table">
+		           	<p class="name_col">Sender Email</p>
+		           	<p class="info_col">nazar.strochynsky@mees...</p>
+		        </div>
+	       	</div>
+	        <div class="col-mob-table message">
+	            <p class="name_col">Message</p>
+	            <p class="info_col">All Online Orders are subject to weight and information cross-check. All Online Orders are subject to weight and information cross-check.</p>
+	        </div>
+	    </div>
+	    <div class="row-order-h">
+			<div class="top d-flex jc">
+		       	<div class="col-mob-table">
+		           	<p class="name_col">Date</p>
+		           	<p class="info_col">02/26/2023 08:37</p>
+		       	</div>
+		        <div class="col-mob-table">
+		           	<p class="name_col">Sender Email</p>
+		           	<p class="info_col">nazar.strochynsky@mees...</p>
+		        </div>
+	       	</div>
+	        <div class="col-mob-table message">
+	            <p class="name_col">Message</p>
+	            <p class="info_col">All Online Orders are subject to weight and information cross-check. All Online Orders are subject to weight and information cross-check.</p>
+	        </div>
+	    </div>
+	</div>
+	<form class="bottom_part">
+		<label for="" class="label_message">
+			<input type="text" placeholder="Повідомлення...">
+			<button class="blue_button54">Add</button>
+		</label>
+	</form>
+</div>
+
+<div class="popup_add_message white-popup-block mfp-hide" id="popup_add_message">
+	<div class="top_part">
+		<h2>View / Add Message</h2>
+		<svg class="close_popup" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path d="M2.33274 15.6668L15.666 2.3335" stroke="#fff" stroke-width="3" stroke-linecap="round"/>
+			<path d="M2.33274 2.33371L15.666 15.667" stroke="#fff" stroke-width="3" stroke-linecap="round"/>
+		</svg>
+	</div>
+	<div class="">
+		<div class="table_message">
+			<table class="table-profile">
+	            <tr class="section-name bb">
+	              <th class="name-sec-tb text-left first-ml">
+	              	Date
+	              </th>
+	              <th class="name-sec-tb text-left">
+	              	Sender Email
+	              </th>
+	              <th class="name-sec-tb text-left">
+	              	Message
+	              </th>
+	            </tr>
+	            <tr>
+	              <td class="first-ml">02/26/2023 08:37</td>
+	              <td>3333@test.com</td>
+	              <td>All Online Orders are subject to weight and information cross-check.</td>
+	            </tr>
+	            <tr>
+	              <td class="first-ml">02/26/2023 08:37</td>
+	              <td>3333@test.com</td>
+	              <td>All Online Orders are subject to weight and information cross-check.</td>
+	            </tr>
+	            <tr>
+	              <td class="first-ml">02/26/2023 08:37</td>
+	              <td>3333@test.com</td>
+	              <td>All Online Orders are subject to weight and information cross-check.</td>
+	            </tr>
+	            <tr>
+	              <td class="first-ml">02/26/2023 08:37</td>
+	              <td>3333@test.com</td>
+	              <td>All Online Orders are subject to weight and information cross-check.</td>
+	            </tr>
+          	</table>
+		</div>
+	</div>
+	<form class="bottom_part">
+		<label for="" class="label_message">
+			<input type="text" placeholder="Повідомлення...">
+			<button class="blue_button54">Add a message</button>
+		</label>
+	</form>
+</div>
 	
 
 
@@ -369,7 +488,7 @@
 								<p class="h4">EDIT</p>
 							</a>
 						</div>
-						<form action="" class="form_parcel_details section-sub-menu active bb">
+						<form action="" class="form_validate form_parcel_details section-sub-menu active bb">
 							<div class="form-flex-wrap  d-flex">
 								<div class="form-flex parcel-details d-flex ai">
 									<div class="form-row flex_direct">
@@ -435,7 +554,7 @@
 								<p class="h4">EDIT</p>
 							</a>
 						</div>
-						<form action="" class="form_delivery_options section-sub-menu bb">
+						<form action="" class="form_validate form_delivery_options section-sub-menu bb">
 							<div class="block_delivery_options">
 								<h3 class="heading_del_options">Delivery Options</h3>
 								<div class="flex_options_cards">
@@ -710,7 +829,7 @@
 								<p class="h4">EDIT</p>
 							</a>
 						</div>
-						<form action="" class="form_send_form form_for_flex_column2 section-sub-menu bb">
+						<form action="" class="form_validate form_send_form form_for_flex_column2 section-sub-menu bb">
 							<div class="divide">Sender Information</div>
 							<div class="form-flex-wrap">
 								<div class="form-flex d-flex ai">
@@ -809,7 +928,7 @@
 								<p class="h4">EDIT</p>
 							</a>
 						</div>
-						<form action="" class="form_deliver_to form_for_flex_column2 section-sub-menu bb">
+						<form action="" class="form_validate form_deliver_to form_for_flex_column2 section-sub-menu bb">
 							<div class="divide">Recipient Information</div>
 							<div class="form-flex-wrap">
 								<div class="form-flex d-flex ai">
