--- a/parcels_shipment_history.html
+++ b/parcels_shipment_history.html
@@ -287,6 +287,125 @@
 		<button class="blue_button45">send</button>
 	</form>
 </div>
+
+<div class="popup_add_message mobile white-popup-block mfp-hide" id="popup_add_message_mobile">
+	<div class="top_part">
+		<h2>View / Add Message</h2>
+		<svg class="close_popup" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path d="M2.33274 15.6668L15.666 2.3335" stroke="#2361A9" stroke-width="3" stroke-linecap="round"/>
+			<path d="M2.33274 2.33371L15.666 15.667" stroke="#2361A9" stroke-width="3" stroke-linecap="round"/>
+		</svg>
+	</div>
+	<div class="table_message_mobile">
+		<div class="row-order-h">
+			<div class="top d-flex jc">
+		       	<div class="col-mob-table">
+		           	<p class="name_col">Date</p>
+		           	<p class="info_col">02/26/2023 08:37</p>
+		       	</div>
+		        <div class="col-mob-table">
+		           	<p class="name_col">Sender Email</p>
+		           	<p class="info_col">nazar.strochynsky@mees...</p>
+		        </div>
+	       	</div>
+	        <div class="col-mob-table message">
+	            <p class="name_col">Message</p>
+	            <p class="info_col">All Online Orders are subject to weight and information cross-check. All Online Orders are subject to weight and information cross-check.</p>
+	        </div>
+	    </div>
+	    <div class="row-order-h">
+			<div class="top d-flex jc">
+		       	<div class="col-mob-table">
+		           	<p class="name_col">Date</p>
+		           	<p class="info_col">02/26/2023 08:37</p>
+		       	</div>
+		        <div class="col-mob-table">
+		           	<p class="name_col">Sender Email</p>
+		           	<p class="info_col">nazar.strochynsky@mees...</p>
+		        </div>
+	       	</div>
+	        <div class="col-mob-table message">
+	            <p class="name_col">Message</p>
+	            <p class="info_col">All Online Orders are subject to weight and information cross-check. All Online Orders are subject to weight and information cross-check.</p>
+	        </div>
+	    </div>
+	    <div class="row-order-h">
+			<div class="top d-flex jc">
+		       	<div class="col-mob-table">
+		           	<p class="name_col">Date</p>
+		           	<p class="info_col">02/26/2023 08:37</p>
+		       	</div>
+		        <div class="col-mob-table">
+		           	<p class="name_col">Sender Email</p>
+		           	<p class="info_col">nazar.strochynsky@mees...</p>
+		        </div>
+	       	</div>
+	        <div class="col-mob-table message">
+	            <p class="name_col">Message</p>
+	            <p class="info_col">All Online Orders are subject to weight and information cross-check. All Online Orders are subject to weight and information cross-check.</p>
+	        </div>
+	    </div>
+	</div>
+	<form class="bottom_part">
+		<label for="" class="label_message">
+			<input type="text" placeholder="Повідомлення...">
+			<button class="blue_button54">Add</button>
+		</label>
+	</form>
+</div>
+
+<div class="popup_add_message white-popup-block mfp-hide" id="popup_add_message">
+	<div class="top_part">
+		<h2>View / Add Message</h2>
+		<svg class="close_popup" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path d="M2.33274 15.6668L15.666 2.3335" stroke="#fff" stroke-width="3" stroke-linecap="round"/>
+			<path d="M2.33274 2.33371L15.666 15.667" stroke="#fff" stroke-width="3" stroke-linecap="round"/>
+		</svg>
+	</div>
+	<div class="">
+		<div class="table_message">
+			<table class="table-profile">
+	            <tr class="section-name bb">
+	              <th class="name-sec-tb text-left first-ml">
+	              	Date
+	              </th>
+	              <th class="name-sec-tb text-left">
+	              	Sender Email
+	              </th>
+	              <th class="name-sec-tb text-left">
+	              	Message
+	              </th>
+	            </tr>
+	            <tr>
+	              <td class="first-ml">02/26/2023 08:37</td>
+	              <td>3333@test.com</td>
+	              <td>All Online Orders are subject to weight and information cross-check.</td>
+	            </tr>
+	            <tr>
+	              <td class="first-ml">02/26/2023 08:37</td>
+	              <td>3333@test.com</td>
+	              <td>All Online Orders are subject to weight and information cross-check.</td>
+	            </tr>
+	            <tr>
+	              <td class="first-ml">02/26/2023 08:37</td>
+	              <td>3333@test.com</td>
+	              <td>All Online Orders are subject to weight and information cross-check.</td>
+	            </tr>
+	            <tr>
+	              <td class="first-ml">02/26/2023 08:37</td>
+	              <td>3333@test.com</td>
+	              <td>All Online Orders are subject to weight and information cross-check.</td>
+	            </tr>
+          	</table>
+		</div>
+	</div>
+	<form class="bottom_part">
+		<label for="" class="label_message">
+			<input type="text" placeholder="Повідомлення...">
+			<button class="blue_button54">Add a message</button>
+		</label>
+	</form>
+</div>
 	
 
 
@@ -404,10 +523,10 @@
 	                      <img src="img/Edit-alt.svg" alt="">
 	                      View / Edit
 	                    </div>
-	                    <div class="line-dots-menu d-flex ai">
-	                      <img src="img/mail.svg" alt="">
+	                    <a href="#popup_add_message" class="button_filter line-dots-menu d-flex ai">
+	                      <img class="" src="img/mail.svg" alt="">
 	                      View / Add Message (2)
-	                    </div>
+	                    </a>
 	                    <div class="line-dots-menu d-flex ai">
 	                      <img src="img/wallet.svg" alt="">
 	                      Pay
@@ -458,10 +577,10 @@
 	                      <img src="img/Edit-alt.svg" alt="">
 	                      View / Edit
 	                    </div>
-	                    <div class="line-dots-menu d-flex ai">
-	                      <img src="img/mail.svg" alt="">
+	                    <a href="#popup_add_message" class="button_filter line-dots-menu d-flex ai">
+	                      <img class="" src="img/mail.svg" alt="">
 	                      View / Add Message (2)
-	                    </div>
+	                    </a>
 	                    <div class="line-dots-menu d-flex ai">
 	                      <img src="img/wallet.svg" alt="">
 	                      Pay
@@ -512,10 +631,10 @@
 	                      <img src="img/Edit-alt.svg" alt="">
 	                      View / Edit
 	                    </div>
-	                    <div class="line-dots-menu d-flex ai">
-	                      <img src="img/mail.svg" alt="">
+	                    <a href="#popup_add_message" class="button_filter line-dots-menu d-flex ai">
+	                      <img class="" src="img/mail.svg" alt="">
 	                      View / Add Message (2)
-	                    </div>
+	                    </a>
 	                    <div class="line-dots-menu d-flex ai">
 	                      <img src="img/wallet.svg" alt="">
 	                      Pay
@@ -566,10 +685,10 @@
 	                      <img src="img/Edit-alt.svg" alt="">
 	                      View / Edit
 	                    </div>
-	                    <div class="line-dots-menu d-flex ai">
-	                      <img src="img/mail.svg" alt="">
+	                    <a href="#popup_add_message" class="button_filter line-dots-menu d-flex ai">
+	                      <img class="" src="img/mail.svg" alt="">
 	                      View / Add Message (2)
-	                    </div>
+	                    </a>
 	                    <div class="line-dots-menu d-flex ai">
 	                      <img src="img/wallet.svg" alt="">
 	                      Pay
@@ -620,10 +739,10 @@
 	                      <img src="img/Edit-alt.svg" alt="">
 	                      View / Edit
 	                    </div>
-	                    <div class="line-dots-menu d-flex ai">
-	                      <img src="img/mail.svg" alt="">
+	                    <a href="#popup_add_message" class="button_filter line-dots-menu d-flex ai">
+	                      <img class="" src="img/mail.svg" alt="">
 	                      View / Add Message (2)
-	                    </div>
+	                    </a>
 	                    <div class="line-dots-menu d-flex ai">
 	                      <img src="img/wallet.svg" alt="">
 	                      Pay
@@ -674,10 +793,10 @@
 	                      <img src="img/Edit-alt.svg" alt="">
 	                      View / Edit
 	                    </div>
-	                    <div class="line-dots-menu d-flex ai">
-	                      <img src="img/mail.svg" alt="">
+	                    <a href="#popup_add_message" class="button_filter line-dots-menu d-flex ai">
+	                      <img class="" src="img/mail.svg" alt="">
 	                      View / Add Message (2)
-	                    </div>
+	                    </a>
 	                    <div class="line-dots-menu d-flex ai">
 	                      <img src="img/wallet.svg" alt="">
 	                      Pay
@@ -728,10 +847,10 @@
 	                      <img src="img/Edit-alt.svg" alt="">
 	                      View / Edit
 	                    </div>
-	                    <div class="line-dots-menu d-flex ai">
-	                      <img src="img/mail.svg" alt="">
+	                    <a href="#popup_add_message" class="button_filter line-dots-menu d-flex ai">
+	                      <img class="" src="img/mail.svg" alt="">
 	                      View / Add Message (2)
-	                    </div>
+	                    </a>
 	                    <div class="line-dots-menu d-flex ai">
 	                      <img src="img/wallet.svg" alt="">
 	                      Pay
@@ -782,10 +901,10 @@
 	                      <img src="img/Edit-alt.svg" alt="">
 	                      View / Edit
 	                    </div>
-	                    <div class="line-dots-menu d-flex ai">
-	                      <img src="img/mail.svg" alt="">
+	                    <a href="#popup_add_message" class="button_filter line-dots-menu d-flex ai">
+	                      <img class="" src="img/mail.svg" alt="">
 	                      View / Add Message (2)
-	                    </div>
+	                    </a>
 	                    <div class="line-dots-menu d-flex ai">
 	                      <img src="img/wallet.svg" alt="">
 	                      Pay
@@ -836,10 +955,10 @@
 	                      <img src="img/Edit-alt.svg" alt="">
 	                      View / Edit
 	                    </div>
-	                    <div class="line-dots-menu d-flex ai">
-	                      <img src="img/mail.svg" alt="">
+	                    <a href="#popup_add_message" class="button_filter line-dots-menu d-flex ai">
+	                      <img class="" src="img/mail.svg" alt="">
 	                      View / Add Message (2)
-	                    </div>
+	                    </a>
 	                    <div class="line-dots-menu d-flex ai">
 	                      <img src="img/wallet.svg" alt="">
 	                      Pay
@@ -890,10 +1009,10 @@
 	                      <img src="img/Edit-alt.svg" alt="">
 	                      View / Edit
 	                    </div>
-	                    <div class="line-dots-menu d-flex ai">
-	                      <img src="img/mail.svg" alt="">
+	                    <a href="#popup_add_message" class="button_filter line-dots-menu d-flex ai">
+	                      <img class="" src="img/mail.svg" alt="">
 	                      View / Add Message (2)
-	                    </div>
+	                    </a>
 	                    <div class="line-dots-menu d-flex ai">
 	                      <img src="img/wallet.svg" alt="">
 	                      Pay
@@ -942,10 +1061,10 @@
 		                      	<img src="img/Edit-alt.svg" alt="">
 		                      	View / Edit
 		                    </div>
-		                    <div class="line-dots-menu d-flex ai">
-		                      	<img src="img/mail.svg" alt="">
+		                    <a href="#popup_add_message_mobile" class="button_filter line-dots-menu d-flex ai">
+		                      	<img class="" src="img/mail.svg" alt="">
 		                      	View / Add Message (2)
-		                    </div>
+		                    </a>
 		                    <div class="line-dots-menu d-flex ai">
 		                      	<img src="img/wallet.svg" alt="">
 		                      	Pay
@@ -1027,10 +1146,10 @@
 		                      	<img src="img/Edit-alt.svg" alt="">
 		                      	View / Edit
 		                    </div>
-		                    <div class="line-dots-menu d-flex ai">
-		                      	<img src="img/mail.svg" alt="">
+		                    <a href="#popup_add_message_mobile" class="button_filter line-dots-menu d-flex ai">
+		                      	<img class="" src="img/mail.svg" alt="">
 		                      	View / Add Message (2)
-		                    </div>
+		                    </a>
 		                    <div class="line-dots-menu d-flex ai">
 		                      	<img src="img/wallet.svg" alt="">
 		                      	Pay
@@ -1112,10 +1231,10 @@
 		                      	<img src="img/Edit-alt.svg" alt="">
 		                      	View / Edit
 		                    </div>
-		                    <div class="line-dots-menu d-flex ai">
-		                      	<img src="img/mail.svg" alt="">
+		                    <a href="#popup_add_message_mobile" class="button_filter line-dots-menu d-flex ai">
+		                      	<img class="" src="img/mail.svg" alt="">
 		                      	View / Add Message (2)
-		                    </div>
+		                    </a>
 		                    <div class="line-dots-menu d-flex ai">
 		                      	<img src="img/wallet.svg" alt="">
 		                      	Pay
@@ -1197,10 +1316,10 @@
 		                      	<img src="img/Edit-alt.svg" alt="">
 		                      	View / Edit
 		                    </div>
-		                    <div class="line-dots-menu d-flex ai">
-		                      	<img src="img/mail.svg" alt="">
+		                    <a href="#popup_add_message_mobile" class="button_filter line-dots-menu d-flex ai">
+		                      	<img class="" src="img/mail.svg" alt="">
 		                      	View / Add Message (2)
-		                    </div>
+		                    </a>
 		                    <div class="line-dots-menu d-flex ai">
 		                      	<img src="img/wallet.svg" alt="">
 		                      	Pay
