edits page details_declaration

--- a/new_parcel.html
+++ b/new_parcel.html
@@ -497,7 +497,7 @@
 								<p class="h4">EDIT</p>
 							</a>
 						</div>
-						<form action="" class="form_delivery_options section-sub-menu bb">
+						<form action="" class="form_delivery_options section-sub-menu bb" autocomplete="off">
 							<div class="block_delivery_options">
 								<h3 class="heading_del_options">Delivery Options</h3>
 								<div class="flex_options_cards first">
