edits 5 section new_parcel, add_prohibited_popup

--- a/new_parcel.html
+++ b/new_parcel.html
@@ -993,16 +993,17 @@
 								    	<td class="parcel-padding">
 								    		<select name="spares_select" id="" class="select select_not_valid">
 								    			<option value="" selected disabled>Запчастини для авто</option>
-												<option value="Запчастини">Запчастини1 для авто</option>
-												<option value="болтики">Запчастини для авто</option>
-												<option value="гайки">Запчастини для авто</option>
+												<option value="Запчастини">Запчастини</option>
+												<option value="бампер">бампер</option>
+												<option value="гайки">гайки</option>
 								    		</select>
 								    	</td>
 								    	<td class="parcel-padding">
 								    		<select name="quantities" id="" class="select select_not_valid">
-								    			<option>0</option>
-								    			<option>0</option>
-								    			<option>0</option>
+								    			<option value="" selected disabled>0</option>
+												<option value="0">0</option>
+												<option value="2">2</option>
+												<option value="4">4</option>
 								    		</select>
 								    	</td>
 								    	<td class="parcel-padding grey-color">
@@ -1010,9 +1011,9 @@
 								    	</td>
 								    	<td class="parcel-padding currency_td">
 								    		<select name="currency" id="" class="currency select select_not_valid">
-								    			<option>USD</option>
-								    			<option>UA</option>
-								    			<option>EU</option>
+								    			<option value="USD">USD</option>
+								    			<option value="UA">UA</option>
+								    			<option value="EU">EU</option>
 								    		</select>
 								    	</td>
 								    	<td class="parcel-padding end delete_goods"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
@@ -1020,16 +1021,18 @@
 								  	<tr class="goods_row">
 								    	<td class="parcel-padding">
 								    		<select name="spares_select" id="" class="select select_not_valid">
-								    			<option>Запчастини для авто</option>
-								    			<option>Запчастини для авто</option>
-								    			<option>Запчастини для авто</option>
+								    			<option value="" selected disabled>Запчастини для авто</option>
+												<option value="Запчастини">Запчастини</option>
+												<option value="бампер">бампер</option>
+												<option value="гайки">гайки</option>
 								    		</select>
 								    	</td>
 								    	<td class="parcel-padding">
 								    		<select name="quantities" id="" class="select select_not_valid">
-								    			<option>0</option>
-								    			<option>0</option>
-								    			<option>0</option>
+								    			<option value="" selected disabled>0</option>
+												<option value="0">0</option>
+												<option value="2">2</option>
+												<option value="4">4</option>
 								    		</select>
 								    	</td>
 								    	<td class="parcel-padding grey-color">
@@ -1037,9 +1040,9 @@
 								    	</td>
 								    	<td class="parcel-padding currency_td">
 								    		<select name="currency" id="" class="currency select select_not_valid">
-								    			<option>USD</option>
-								    			<option>UA</option>
-								    			<option>EU</option>
+								    			<option value="USD">USD</option>
+								    			<option value="UA">UA</option>
+								    			<option value="EU">EU</option>
 								    		</select>
 								    	</td>
 								    	<td class="parcel-padding end delete_goods"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
@@ -1047,16 +1050,18 @@
 								  	<tr class="goods_row">
 								    	<td class="parcel-padding">
 								    		<select name="group_name" id="" class="select select_not_valid">
-								    			<option>Запчастини для авто</option>
-								    			<option>Запчастини для авто</option>
-								    			<option>Запчастини для авто</option>
+								    			<option value="" selected disabled>Запчастини для авто</option>
+												<option value="Запчастини">Запчастини</option>
+												<option value="бампер">бампер</option>
+												<option value="гайки">гайки</option>
 								    		</select>
 								    	</td>
 								    	<td class="parcel-padding">
 								    		<select name="quantities" id="" class="select select_not_valid">
-								    			<option>0</option>
-								    			<option>0</option>
-								    			<option>0</option>
+								    			<option value="" selected disabled>0</option>
+												<option value="0">0</option>
+												<option value="2">2</option>
+												<option value="4">4</option>
 								    		</select>
 								    	</td>
 								    	<td class="parcel-padding grey-color">
@@ -1064,9 +1069,9 @@
 								    	</td>
 								    	<td class="parcel-padding currency_td">
 								    		<select name="currency" id="" class="currency select select_not_valid">
-								    			<option>USD</option>
-								    			<option>UA</option>
-								    			<option>EU</option>
+								    			<option value="USD">USD</option>
+								    			<option value="UA">UA</option>
+								    			<option value="EU">EU</option>
 								    		</select>
 								    	</td>
 								    	<td class="parcel-padding end delete_goods"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
@@ -1074,16 +1079,18 @@
 								  	<tr class="goods_row">
 								    	<td class="parcel-padding br">
 								    		<select name="group_name" id="" class="select select_not_valid">
-								    			<option>Запчастини для авто</option>
-								    			<option>Запчастини для авто</option>
-								    			<option>Запчастини для авто</option>
+								    			<option value="" selected disabled>Запчастини для авто</option>
+												<option value="Запчастини">Запчастини</option>
+												<option value="бампер">бампер</option>
+												<option value="гайки">гайки</option>
 								    		</select>
 								    	</td>
 								    	<td class="parcel-padding">
 								    		<select name="quantities" id="" class="select select_not_valid">
-								    			<option>0</option>
-								    			<option>0</option>
-								    			<option>0</option>
+								    			<option value="" selected disabled>0</option>
+												<option value="0">0</option>
+												<option value="2">2</option>
+												<option value="4">4</option>
 								    		</select>
 								    	</td>
 								    	<td class="parcel-padding grey-color">
@@ -1091,15 +1098,15 @@
 								    	</td>
 								    	<td class="parcel-padding currency_td">
 								    		<select name="currency" id="" class="currency select select_not_valid">
-								    			<option>USD</option>
-								    			<option>UA</option>
-								    			<option>EU</option>
+								    			<option value="USD">USD</option>
+								    			<option value="UA">UA</option>
+								    			<option value="EU">EU</option>
 								    		</select>
 								    	</td>
 								    	<td class="parcel-padding end delete_goods"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
 								  	</tr>
 							  	</tbody>
-							  		<tr class="">
+							  		<tr class="add_new_item_tr">
 								  		<td class="parcel-padding br">
 								  			<a class="add_new_item add_new_item_click">
 								  				<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
