--- a/details_declaration.html
+++ b/details_declaration.html
@@ -1038,15 +1038,15 @@
 						</div>
 						<div class="section-sub-menu parcel-content bb">
 							<table class="parcel-content-table">
-								<tbody>
-								  	<tr>
+									<tr>
 								    	<th class="parcel-padding h4">GROUP NAME</th>
 								    	<th class="parcel-padding h4">QUANTITIES</th>
 								    	<th class="parcel-padding h4">value</th>
 								    	<th class="parcel-padding h4"></th>
 								    	<th class="parcel-padding h4"></th>
 								  	</tr>
-								  	<tr>
+								<tbody class="parcel_all_goods">
+								  	<tr class="goods_row">
 								    	<td class="parcel-padding">
 								    		<select name="spares_select" id="" class="select select_not_valid">
 								    			<option value="" selected disabled>Запчастини для авто</option>
@@ -1073,9 +1073,9 @@
 								    			<option value="EU">EU</option>
 								    		</select>
 								    	</td>
-								    	<td class="parcel-padding end"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
+								    	<td class="parcel-padding end delete_goods"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
 								  	</tr>
-								  	<tr>
+								  	<tr class="goods_row">
 								    	<td class="parcel-padding">
 								    		<select name="spares_select" id="" class="select select_not_valid">
 								    			<option value="" selected disabled>Запчастини для авто</option>
@@ -1102,9 +1102,9 @@
 								    			<option value="EU">EU</option>
 								    		</select>
 								    	</td>
-								    	<td class="parcel-padding end"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
+								    	<td class="parcel-padding end delete_goods"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
 								  	</tr>
-								  	<tr>
+								  	<tr class="goods_row">
 								    	<td class="parcel-padding">
 								    		<select name="group_name" id="" class="select select_not_valid">
 								    			<option value="" selected disabled>Запчастини для авто</option>
@@ -1131,9 +1131,9 @@
 								    			<option value="EU">EU</option>
 								    		</select>
 								    	</td>
-								    	<td class="parcel-padding end"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
+								    	<td class="parcel-padding end delete_goods"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
 								  	</tr>
-								  	<tr>
+								  	<tr class="goods_row">
 								    	<td class="parcel-padding br">
 								    		<select name="group_name" id="" class="select select_not_valid">
 								    			<option value="" selected disabled>Запчастини для авто</option>
@@ -1160,23 +1160,23 @@
 								    			<option value="EU">EU</option>
 								    		</select>
 								    	</td>
-								    	<td class="parcel-padding end"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
+								    	<td class="parcel-padding end delete_goods"><a href="" class="basket"><img  src="img/basket.svg" alt=""></a></td>
 								  	</tr>
-								  	<tr>
+							  	</tbody>
+							  		<tr class="add_new_item_tr">
 								  		<td class="parcel-padding br">
-								  			<a class="add_new_item">
+								  			<a class="add_new_item add_new_item_click">
 								  				<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
 													<path d="M14 2.625C7.72789 2.625 2.625 7.72789 2.625 14C2.625 20.2721 7.72789 25.375 14 25.375C20.2721 25.375 25.375 20.2721 25.375 14C25.375 7.72789 20.2721 2.625 14 2.625ZM18.375 14.875H14.875V18.375C14.875 18.6071 14.7828 18.8296 14.6187 18.9937C14.4546 19.1578 14.2321 19.25 14 19.25C13.7679 19.25 13.5454 19.1578 13.3813 18.9937C13.2172 18.8296 13.125 18.6071 13.125 18.375V14.875H9.625C9.39294 14.875 9.17038 14.7828 9.00628 14.6187C8.84219 14.4546 8.75 14.2321 8.75 14C8.75 13.7679 8.84219 13.5454 9.00628 13.3813C9.17038 13.2172 9.39294 13.125 9.625 13.125H13.125V9.625C13.125 9.39294 13.2172 9.17038 13.3813 9.00628C13.5454 8.84219 13.7679 8.75 14 8.75C14.2321 8.75 14.4546 8.84219 14.6187 9.00628C14.7828 9.17038 14.875 9.39294 14.875 9.625V13.125H18.375C18.6071 13.125 18.8296 13.2172 18.9937 13.3813C19.1578 13.5454 19.25 13.7679 19.25 14C19.25 14.2321 19.1578 14.4546 18.9937 14.6187C18.8296 14.7828 18.6071 14.875 18.375 14.875Z" fill="#2361A9"/>
 												</svg>
 												<p>Add new item</p>
 											</a>
 								  		</td>
-								  		<td class="parcel-padding br"></td>
+								  		<td></td>
 								  		<td></td>
 								  		<td></td>
 								  		<td></td>
 								  	</tr>
-							  	</tbody>
 							</table>
 							<div class="mobile-parcel-content-table">
 								<div class="item-parcel-cont-quant">
