add link on site

--- a/new_parcel.html
+++ b/new_parcel.html
@@ -870,7 +870,7 @@
 									</div>
 									<div class="text_part">
 										<h3 class="name">Meest Dropoff</h3>
-										<a href="">us.meest.com/offices</a>
+										<a target="_blank" href="https://us.meest.com/offices">us.meest.com/offices</a>
 									</div>
 								</div>
 								<div class="dropoff_row">
@@ -879,7 +879,7 @@
 									</div>
 									<div class="text_part">
 										<h3 class="name">UPS DropOff</h3>
-										<a href="">www.ups.com/dropoff?l...</a>
+										<a target="_blank" href="https://www.ups.com/dropoff?loc=en_US">www.ups.com/dropoff?l...</a>
 									</div>
 								</div>
 								<div class="dropoff_row">
@@ -888,7 +888,7 @@
 									</div>
 									<div class="text_part">
 										<h3 class="name">FedEx DropOff</h3>
-										<a href="">local.fedex.com/en-us</a>
+										<a target="_blank" href="https://local.fedex.com/en-us">local.fedex.com/en-us</a>
 									</div>
 								</div>
 							</div>
